tools ignore translation

--- a/DiscoverCluj/app/src/main/AndroidManifest.xml
+++ b/DiscoverCluj/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
       
-        <activity android:name=".OpenSettings">
+        <activity android:name=".OpenSettings"/>
         <activity android:name=".PlacesList"/>
 
     </application>
