--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@
 /build
 /captures
 .externalNativeBuild
-DiscoverCluj/.idea/
+DiscoverCluj/.idea/caches/build_file_checksums.ser
+DiscoverCluj/.idea/workspace.xml
